# face_search

./: README.md  index.faiss  pyproject.toml
src/face_search/: app.py  app_webcam.py  face_recognition.py
src/face_search/faces_clustered/: index.faiss
src/face_search/modules/: clustering.py  detection.py  facenet.py  recognition.py  representation.py  utils.py
